Fix alignment of multi-line sheet-buttons

--- a/src/app/components/sheet/sheet.component.scss
+++ b/src/app/components/sheet/sheet.component.scss
@@ -1,7 +1,8 @@
 .sheet--button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 1rem;
-
   height: 100%;
-
   text-align: center;
 }
